--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+table thead th {
+  vertical-align: bottom;
+  border-bottom: 1px solid transparent
+}
+
+table tr th {
+  color: #ffffff;
+  background-color: #33b5e5;
+  border-color: #33b5e5;
+  border-bottom: 1px solid transparent !important;
+
+}
+
+tr td {
+    font-size: 15px;
+    color: #000000;
+    line-height: 1.4;
+}
+
+.page-item .page-link{
+  margin: 0 3px;
+  border-color: #388e3c;
+  border: 1px solid #388e3c;
+  cursor: pointer;
+}
+
+.pagination .page-item.active .page-link{
+  background-color:#388e3c;
+ 
+}
+
+
+.my-badge {
+  background-color:#ffcccb;
+    padding: 0 1.5rem;
+    margin-right: 10px;
+}
